Using an old vulnerable version of jquery e_e

--- a/benwaonline/templates/layout.html
+++ b/benwaonline/templates/layout.html
@@ -30,6 +30,6 @@
 <div class='box sidebar'>{% block sidebar %}{% endblock %}</div>
 <div class='box main'>{% block main %}{% endblock %}</div>
 </div>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 {% block scripts %}{% endblock %}
 </html>
